Fri Nov  3 11:30:30 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add a little hack to malloc_wrapper.sh to allow tests in deeper
	  directories to find malloccheck.so.

Thu Nov  2 18:49:58 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* More stuff in indexerquickstart.html

Thu Nov  2 18:24:12 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add `extern "C"' to btree.h so that it will link with C++ code.

	* QuartzDiskTable now has set_entry() and apply() methods rather than
	  a single set_entries() method - this is more flexible and neatens
	  the code considerably.

	* Don't store btree pointers in AutoPtr's - they're not created by
	  new.

	* Implement remaining methods in QuartzDiskTable

	* Make quartztest compile by correcting syntax for using cursors.

	* Add a btree regression test to quartztest.

Wed Nov  1 18:59:28 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Corrected a couple of points in btree_api.txt

	* More work on quartz - implemented cursors, and some cursor operations.

Wed Nov  1 18:26:53 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Wrote more of the indexer quickstart document.

Wed Nov  1 13:00:33 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add header guards to btree.h - should fix includetest.

Tue Oct 31 18:23:57 GMT 2000 Olly Betts

	* Encoding of terms changed to a scheme which takes approximately
	  half the space.

Tue Oct 31 18:18:36 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* More work on the indexer quickstart document.

Tue Oct 31 18:10:49 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Begun changing implementation of QuartzTable to use btree stuff.
	  Currently doesn't compile.

	* Added quartztest that opening an unavailable revision of a valid
	  database doesn't throw an exception.

	* More updates / corrections to btree_api.txt documentation.

Tue Oct 31 16:25:14 GMT 2000 Olly Betts
